--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@
 
 /* box 4 */
 .box4 {
-  grid-template: auto 1fr auto auto / 1fr 1fr;
+  grid-template: auto 250px auto auto / 1fr 1fr;
 }
 .box4 img {
   grid-area: 2 / 1 / 3 / 3;
